# raytracing-rasterization

./: .clang-format  .gitignore  CMakeLists.txt  README.md  copy-assets.cmake
libs/: CMakeLists.txt
libs/map/: CMakeLists.txt  map.c  map.h
libs/vec/: CMakeLists.txt  vec.c  vec.h
libs/xml/: CMakeLists.txt
src/: main.c  vmath.c  vmath.h
